--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header>
-        <h1>Servir con verdad</h1>
-        <p>Este sitio contiene cartas escritas desde el corazón. Si alguna llega a ti, úsala para sanar, compartir o simplemente recordar que no estás solo.</p>    
+        <h1>Carta para los que sienten que ya no pueden más</h1>
+        <p>Si estás leyendo esto y crees que ya no hay salida, quiero decirte algo: sí la hay. No es rápida, ni fácil, ni perfecta. Pero existe.  
+Yo también sentí que no valía la pena hablar, que mi voz no tenía lugar en este mundo. Pero entendí que mientras respiras, tienes oportunidad.  
+Esta carta es para ti, que aún con miedo, buscas fuerza. Hermano, no estás solo..</p>    
     </header>
     
 <main>
